@@ -31,6 +31,10 @@ if (stristr($_SERVER["SCRIPT_NAME"], basename(__FILE__))!==false) {
 	exit;
 }
 
+$pgv_lang["parent_family"]			= "Parents Family";
+$pgv_lang["step_parent_family"]		= "Step-Parent Family";
+$pgv_lang["immediate_family"]		= "Immediate Family";
+
 $pgv_lang["load_full_tree"]			= "View this tree in the full page interactive tree";
 $pgv_lang["hide_show_spouses"]		= "Show or hide multiple spouses";
 $pgv_lang["interactive_tree"]		= "Interactive Tree";
